build(setup): 更新包数据配置以优化静态资源包含
- 移除通配符配置，改为明确指定静态资源路径
- 仅保留 HTML、CSS、JS 文件的打包规则
- 排除运行时生成的翻译文件
- 精确控制 pytuck_view 包的静态资源包含范围
- 提升构建效率并减少不必要的文件打包

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,12 @@ packages = ["pytuck_view", "pytuck_view.api", "pytuck_view.base", "pytuck_view.s
 include-package-data = true
 
 [tool.setuptools.package-data]
-"*" = ["static/*", "static/**/*"]
+# 仅包含必需的静态资源，排除运行时生成的翻译文件
+pytuck_view = [
+    "static/*.html",
+    "static/*.css",
+    "static/*.js",
+]
 
 [dependency-groups]
 # uv dev 依赖组（PEP 735）：仅用于开发/CI，不进入运行时依赖链
